--- a/frontend/static/style.css
+++ b/frontend/static/style.css
@@ -237,10 +237,11 @@ select {
 }
 .chart-container {
   padding: 10px 0;
+  height: 400px;
 }
 #weatherChart {
   width: 100%;
-  max-height: 360px;
+  height: 100%;
 }
 
 .chart-modal {
